[package]
name = "libaur"
description = "Libary for aur things"
version = "0.0.0"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2018"

homepage = "http://github.com/Morganamilo/libaur.rs"
repository = "http://github.com/Morganamilo/libaur.rs"
documentation = "https://docs.rs/libaur"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman", "aur"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "1.1.3"
alpm-utils = "0.6.2"
bytes = { version = "0.5.6", optional = true }
kuchiki = { version = "0.8.1", optional = true }
reqwest = { version = "0.10.8", optional = true }
url = { version = "2.2.0", optional = true }
rss = { version = "1.9.0", default-features = false, optional = true }
htmlescape = { version = "0.3.1", optional = true }


[features]

comments = ["reqwest", "url", "kuchiki"]
news = ["bytes", "rss", "reqwest", "url", "htmlescape"]
aur= ["reqwest", "url"]
default = ["comments", "news", "aur"]
